--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,12 +29,11 @@ services:
 
     mysql:
         image: mysql:8.0
+        restart: always
         container_name: mysql
         environment:
             MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
             MYSQL_DATABASE: ${DB_DATABASE}
-            MYSQL_USER: ${DB_USERNAME}
-            MYSQL_PASSWORD: = ${DB_PASSWORD}
         ports:
             - "3306:3306"
         volumes:
