--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,5 +1,9 @@
 FROM php:8.2-fpm
 
+WORKDIR /var/www
+
+COPY . .
+
 RUN apt-get update && apt-get install -y \
     bash \
     curl \
@@ -7,9 +11,13 @@ RUN apt-get update && apt-get install -y \
     libzip-dev \
     zlib1g-dev \
     unzip \
-    && docker-php-ext-install zip gd
+    && docker-php-ext-install zip gd pdo_mysql
 
-COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
+RUN mkdir -p storage/logs && \
+    chown -R www-data:www-data storage bootstrap/cache && \
+    chmod -R 775 storage bootstrap/cache
 
-WORKDIR /var/www
-
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer \
+ && composer install --no-dev --optimize-autoloader
+ 
+CMD ["php-fpm"]
